--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.4.1",
     "react-native": "0.39.2",
+    "react-native-module": "0.0.1",
     "react-native-motion-manager": "0.0.6",
     "react-native-scrollable-tab-view": "^0.7.0",
     "react-native-sensor-manager": "^0.1.10"
