--- a/ios/ArueMadrid.xcodeproj/xcshareddata/xcschemes/ArueMadrid.xcscheme
+++ b/ios/ArueMadrid.xcodeproj/xcshareddata/xcschemes/ArueMadrid.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ArueApp.app"
-               BlueprintName = "ArueApp"
-               ReferencedContainer = "container:ArueApp.xcodeproj">
+               BuildableName = "ArueMadrid.app"
+               BlueprintName = "ArueMadrid"
+               ReferencedContainer = "container:ArueMadrid.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ArueAppTests.xctest"
-               BlueprintName = "ArueAppTests"
-               ReferencedContainer = "container:ArueApp.xcodeproj">
+               BuildableName = "ArueMadridTests.xctest"
+               BlueprintName = "ArueMadridTests"
+               ReferencedContainer = "container:ArueMadrid.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ArueAppTests.xctest"
-               BlueprintName = "ArueAppTests"
-               ReferencedContainer = "container:ArueApp.xcodeproj">
+               BuildableName = "ArueMadridTests.xctest"
+               BlueprintName = "ArueMadridTests"
+               ReferencedContainer = "container:ArueMadrid.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ArueApp.app"
-            BlueprintName = "ArueApp"
-            ReferencedContainer = "container:ArueApp.xcodeproj">
+            BuildableName = "ArueMadrid.app"
+            BlueprintName = "ArueMadrid"
+            ReferencedContainer = "container:ArueMadrid.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -77,9 +77,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ArueApp.app"
-            BlueprintName = "ArueApp"
-            ReferencedContainer = "container:ArueApp.xcodeproj">
+            BuildableName = "ArueMadrid.app"
+            BlueprintName = "ArueMadrid"
+            ReferencedContainer = "container:ArueMadrid.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -96,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ArueApp.app"
-            BlueprintName = "ArueApp"
-            ReferencedContainer = "container:ArueApp.xcodeproj">
+            BuildableName = "ArueMadrid.app"
+            BlueprintName = "ArueMadrid"
+            ReferencedContainer = "container:ArueMadrid.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
