fix: updated gradle

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,9 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+android.enableAapt2=false
+
+MYAPP_RELEASE_STORE_FILE=arue-key.jks
+MYAPP_RELEASE_KEY_ALIAS=key0
+MYAPP_RELEASE_STORE_PASSWORD=Arue1233
+MYAPP_RELEASE_KEY_PASSWORD=Arue1233
